--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <groupId>pl.allegro.tech.boot</groupId>
+      <artifactId>handlebars-spring-boot-starter</artifactId>
+      <version>0.2.14</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
