--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
+      <artifactId>webjars-locator</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
       <artifactId>jquery</artifactId>
       <version>2.2.4</version>
     </dependency>
