--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>pl.allegro.tech.boot</groupId>
-      <artifactId>handlebars-spring-boot-starter</artifactId>
-      <version>0.2.14</version>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
@@ -65,6 +60,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
   </dependencies>
 
