--- a/pom.xml
+++ b/pom.xml
@@ -65,10 +65,16 @@
     	<groupId>org.springframework.boot</groupId>
     	<artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
+    <dependency>
+      <groupId>nz.net.ultraq.thymeleaf</groupId>
+      <artifactId>thymeleaf-layout-dialect</artifactId>
+    </dependency>
   </dependencies>
 
   <properties>
     <java.version>1.7</java.version>
+    <thymeleaf.version>3.0.3.RELEASE</thymeleaf.version>
+    <thymeleaf-layout-dialect.version>2.2.1</thymeleaf-layout-dialect.version>
   </properties>
 
   <build>
