--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,10 @@
       <groupId>nz.net.ultraq.thymeleaf</groupId>
       <artifactId>thymeleaf-layout-dialect</artifactId>
     </dependency>
+    <dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-hateoas</artifactId>
+    </dependency>
   </dependencies>
 
   <properties>
