--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-starter-hateoas</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>org.atteo</groupId>
+    	<artifactId>evo-inflector</artifactId>
+    	<version>1.2.2</version>
+    </dependency>
   </dependencies>
 
   <properties>
