--- a/pom.xml
+++ b/pom.xml
@@ -78,12 +78,26 @@
     	<artifactId>evo-inflector</artifactId>
     	<version>1.2.2</version>
     </dependency>
+    <dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework.security</groupId>
+    	<artifactId>spring-security-test</artifactId>
+    	<scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.thymeleaf.extras</groupId>
+    	<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+    </dependency>
   </dependencies>
 
   <properties>
     <java.version>1.7</java.version>
     <thymeleaf.version>3.0.3.RELEASE</thymeleaf.version>
     <thymeleaf-layout-dialect.version>2.2.1</thymeleaf-layout-dialect.version>
+    <thymeleaf-extras-springsecurity4.version>3.0.1.RELEASE</thymeleaf-extras-springsecurity4.version>
   </properties>
 
   <build>
