--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
     	<groupId>org.thymeleaf.extras</groupId>
     	<artifactId>thymeleaf-extras-springsecurity4</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.httpcomponents</groupId>
+    	<artifactId>httpclient</artifactId>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
 
   <properties>
