--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,10 @@
     	<artifactId>httpclient</artifactId>
     	<scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-data-rest</artifactId>
+    </dependency>
   </dependencies>
 
   <properties>
