--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 
   <groupId>uk.ac.man.cs</groupId>
   <artifactId>comp23412-hello-mvc</artifactId>
-  <version>0.1.0</version>
+  <version>2.0.0</version>
   <name>COMP23412 Hello MVC</name>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.4.6.RELEASE</version>
+    <version>2.1.3.RELEASE</version>
   </parent>
 
   <dependencies>
@@ -25,10 +25,6 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.webjars</groupId>
-      <artifactId>webjars-locator</artifactId>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
@@ -60,6 +56,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
     	<groupId>org.springframework.boot</groupId>
@@ -88,10 +90,6 @@
     	<scope>test</scope>
     </dependency>
     <dependency>
-    	<groupId>org.thymeleaf.extras</groupId>
-    	<artifactId>thymeleaf-extras-springsecurity4</artifactId>
-    </dependency>
-    <dependency>
     	<groupId>org.apache.httpcomponents</groupId>
     	<artifactId>httpclient</artifactId>
     	<scope>test</scope>
@@ -100,14 +98,27 @@
     	<groupId>org.springframework.boot</groupId>
     	<artifactId>spring-boot-starter-data-rest</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>org.thymeleaf.extras</groupId>
+    	<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>org.webjars</groupId>
+    	<artifactId>webjars-locator-core</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>org.junit.platform</groupId>
+    	<artifactId>junit-platform-surefire-provider</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>org.junit.jupiter</groupId>
+    	<artifactId>junit-jupiter-api</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>org.junit.jupiter</groupId>
+    	<artifactId>junit-jupiter-engine</artifactId>
+    </dependency>
   </dependencies>
-
-  <properties>
-    <java.version>1.7</java.version>
-    <thymeleaf.version>3.0.3.RELEASE</thymeleaf.version>
-    <thymeleaf-layout-dialect.version>2.2.1</thymeleaf-layout-dialect.version>
-    <thymeleaf-extras-springsecurity4.version>3.0.1.RELEASE</thymeleaf-extras-springsecurity4.version>
-  </properties>
 
   <build>
     <plugins>
@@ -115,7 +126,14 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-compiler-plugin</artifactId>
+    	</plugin>
     </plugins>
   </build>
 
+  <properties>
+  	<java.version>11</java.version>
+  </properties>
 </project>
