--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,15 @@
     	<groupId>org.hibernate.validator</groupId>
     	<artifactId>hibernate-validator</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>io.projectreactor</groupId>
+    	<artifactId>reactor-test</artifactId>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
