--- a/pom.xml
+++ b/pom.xml
@@ -114,12 +114,8 @@
     	<artifactId>junit-jupiter-engine</artifactId>
     </dependency>
     <dependency>
-    	<groupId>javax.validation</groupId>
-    	<artifactId>validation-api</artifactId>
-    </dependency>
-    <dependency>
-    	<groupId>org.hibernate.validator</groupId>
-    	<artifactId>hibernate-validator</artifactId>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <dependency>
     	<groupId>org.springframework.boot</groupId>
