Update Spring Security to version 5.8.9.
This is in anticipation of moving to Spring 6/Spring Boot 3.

--- a/pom.xml
+++ b/pom.xml
@@ -141,4 +141,7 @@
     </plugins>
   </build>
 
+  <properties>
+  	<spring-security.version>5.8.9</spring-security.version>
+  </properties>
 </project>
