--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,28 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
     	<artifactId>maven-compiler-plugin</artifactId>
-    	</plugin>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>properties</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            -javaagent:${org.mockito:mockito-core:jar}
+            -Xshare:off
+          </argLine>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
