--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-            -javaagent:${org.mockito:mockito-core:jar}
+            -javaagent:${env.HOME}/.m2/repository/org/mockito/mockito-core/5.17.0/mockito-core-5.17.0.jar
             -Xshare:off
           </argLine>
         </configuration>
